--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">App_Project</string>
     <string name="test_branch">Branch</string>
+    <string name="test_branch2">Branch</string>
+
 </resources>
